=== CHANGES: ameritrade ===

2018-09-28

  - Added lazy option to the API in order to take full advantage of the cache
    while developing, and not even having to reconnect if everything requested
    has been cached.


2018-09-24

  - Added function to build a CUSIP given an Option.


2018-09-13

  - Added input schema validation for POST methods. The argument is called
    'payload' and is directly validated against the schemas provided by the API
    documentation.

  - Implemented POST method.

  - Implemented debug option in configuration.

  - Implemented automatic support for reusing the refresh token. This
    significantly extends the duration of valid login credentials.

  - Added a function to convert from an Option object to an Ameritrade option symbol.


2018-09-03

  - Added options symbol parsing support.


2018-08-30

  - Fixed bug with passing in kw args with value None, which should always be
    ignored.


2018-08-27

  - Added minimal example client program.


2018-08-24

  - Added early check for existence of key/certificate files.

  - Added example script to cancel all orders and implemented DELETE method.

  - Added readonly to scriptgs.open_with_dirs() function.

  - Added example script calculating various probability estimates.

  - Updated strangle options strategy example.


2018-08-22

  - Added a simple README file.


2018-08-20

  - Switched repository to non-publishing (continuous).

  - Added example short single call strategy.

  - Added ameritrade.scripts and default function add_script_args() and
    open_with_args() in order to make it easy to write lots of example scripts.


2018-08-14

  - Initial release.